removed perfectScrollbar, responsivness fixed

--- a/app/assets/less/base/_variables.less
+++ b/app/assets/less/base/_variables.less
@@ -71,12 +71,13 @@
 @base-placeholder-color:                        #999;
 
 // Grid Containers
-@container-mobile:                              100%;
+@container-mobile:                              0px;
 @container-tablet:                              720px;
 @container-desktop:                             960px;
 @container-hd:                                  1120px;
 
 // Responsive Breakpoints
+@breakpoint-mobile:                             (@container-mobile + 20);
 @breakpoint-tablet:                             (@container-tablet + 20);
 @breakpoint-desktop:                            (@container-desktop + 20);
 @breakpoint-hd:                                 (@container-hd + 20);
